# vit-bias-aware-structural-distillation

./: .gitignore  CLAUDE.md  README.md  TECHNICAL_OVERVIEW.md  main.py  pyproject.toml  requirements.txt  setup_env.sh
configs/: cifar_improved_config.yaml  config.yaml  convnext_v2_cifar_config.yaml  default.yaml  defaults.yaml  deit_cifar_config.yaml  deit_mnist_config.yaml  deit_ss_distill_cifar_ablation_ce_only.yaml  deit_ss_distill_cka_cifar_config.yaml  deit_ss_distill_gram_ablation_config.yaml  mnist_improved_config.yaml  resnet18_cifar_config.yaml  vit_cifar_config.yaml  vit_mnist_config.yaml
configs/dataset/: cifar10.yaml  mnist.yaml
configs/experiment/: ablation_no_attn.yaml  ablation_no_gram.yaml  ablation_no_rel.yaml  ablation_no_rsd.yaml  ablation_no_spectral.yaml  basd_cifar100.yaml  basd_imagenet.yaml  basd_imagenet_cross_arch.yaml  basd_imagenet_deit_small.yaml  baseline_imagenet.yaml
configs/model/: adaptive_cnn.yaml  convnext_v2.yaml  deit_tiny.yaml  resnet18.yaml
configs/training/: adamw_cosine.yaml  sgd_step.yaml
experiments/ablations/: ce_only.yaml  gram_matrix.yaml
experiments/baselines/: adaptive_cnn_cifar.yaml  adaptive_cnn_mnist.yaml  convnext_v2_cifar.yaml  deit_distill_cifar.yaml  resnet18_cifar.yaml
experiments/main/: basd_imagenet.yaml  cst_cka_cifar.yaml
resources/arXiv-2210.00944v1/: consolidated_CSKD.tex
scripts/: analyze.py  eval.py  quick_test.sh  reproduce.sh  reproduce_figure3.sh  reproduce_table1.sh  run_all_experiments.sh  run_paper_experiments.sh  train.py
src/: __init__.py  __main__.py  config.py  datasets.py  distillation.py  eval.py  evaluation.py  models.py  train.py  training.py  vit.py
tests/: test_config_merging.py  test_critical_bugs.py  test_data_pipeline.py  test_forensics_dry_run.py  test_model_registry.py
vit_inductive_bias_distillation/: __init__.py  config.py  eval.py  runtime_log.py  train.py
(+108 files in other folders)
