[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-inductive-bias-distillation"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchmetrics==1.2.0",
    "numpy==1.26.0",
    "PyYAML==6.0.1",
    "datasets==3.2.0",
    "timm==1.0.3",
    "accelerate==0.27.2",
]

[project.scripts]
basd-train = "vit_inductive_bias_distillation.train:main"
basd-eval = "vit_inductive_bias_distillation.eval:main"

[tool.setuptools.packages.find]
include = ["vit_inductive_bias_distillation*"]
